Fixed the Layout problems

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -267,11 +267,10 @@
 
             .p-dd-content
             {
-                padding: 15px 20px;
-                margin: 0 15px;
+                margin: 15px 15px;
                 display: flex;
                 flex-direction: column;
-               
+                position: static;
 
                 button
                 {
@@ -295,12 +294,14 @@
                 {
                     opacity: 0;
                     background-color: white;
+                    box-shadow: 4px 4px 10px #1f1f1f;
                     margin-top: 20px;
                     padding: 15px;
                     border-radius: 10px;
+                    transition: 0.4s ease-in-out;
 
                     font-family: 'Ubuntu';
-                    font-weight: 500;
+                    font-weight: 400;
 
                     li
                     {
@@ -311,13 +312,15 @@
                         display: flex;
                         flex-direction: column;
                         font-family: 'Ubuntu';
-                        //font-weight: 400;
+                        font-weight: 400;
     
     
                         &:hover
                         {
-                            //font-weight: 500;
+                            font-weight: 420;
                             color: black;
+                            cursor: pointer;
+                            padding: 5px;
                         }
                     }
                 }
@@ -433,17 +436,84 @@ footer
     display: flex;
     justify-content: center;
     color: $GrayishBlue;  
-    //padding: 20px;
+    padding: 20px;
 
     a 
     {
         border: none;
-        //padding: 0;
+        padding: 0;
 
         &:hover 
         {
             background-color: $VeryDarkBlackBlue;
             color: #ff3300;  
+        }
+    }
+}
+
+@media only screen and (max-width: 900px)
+{
+    .everything 
+    {
+        display: grid;
+        max-width: 100vw;
+        grid-template-columns: 1fr;
+        overflow-x: hidden;
+        grid-template-rows: 1fr 0.1fr 0.9fr 0.9fr 1.6fr 1fr 1fr 0.6fr 0.1fr;
+    //grid-gap: 1vw;
+    grid-template-areas: 
+        "cont1"
+        "heading"
+        "cont3"
+        "cont2"
+        "cont4"
+        "cont7"
+        "cont8"
+        "footer"
+        "attr";
+
+        .heading
+        {
+            max-height: 5vh;
+            margin: 0;
+            padding: 10px;
+            position: relative;
+            z-index: 100000 !important;
+
+            h1 
+            {
+                font-weight: 500;
+                font-size: 2em;
+            }
+        }
+
+        .container3
+        { 
+            display:flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto;
+
+            img 
+            {
+                position: relative;
+                top: 5vh;
+                left: auto;
+                max-width: 180%;
+                margin: 0 auto;
+            }
+        }
+
+        .container4 
+        {
+            max-height: 160vh;
+
+            section 
+            {
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 1fr 1fr;
+            }
         }
     }
 }
